Fix up empty spacing between summary spaces, convert EventLogger to static class

--- a/code/UI/Components/TabContainer/TabContainer.scss
+++ b/code/UI/Components/TabContainer/TabContainer.scss
@@ -2,6 +2,7 @@ tabcontainer
 {
     flex-grow: 1;
     flex-direction: column;
+    flex-shrink: 0;
 
     > .sheets
     {
